--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -91,7 +91,7 @@ The reconstruction of the chapel involved both the mental reconstruction of modi
 
 %=========================================================================================================
 
-\section{Virtual Reality HMDs}
+\section{Virtual Reality HMD}
 The concept of virtual reality and the associated HMDs that provide wide field of view, stereoscopic 3D graphics coupled with head tracking is currently experiencing a resurgence of interest and investment, thanks largely to the advent of Oculus\footnote{\url{https://www.oculus.com/}} and their Rift platform\footnote{\url{https://www.oculus.com/rift/}}. Whilst the first head mounted computer display was created in the late 1960s by Ivan Sutherland~\cite{Rheingold1992}, it was not until the late 1980s and early 1990s that VR began to be promoted as a consumer platform. Unfortunately both hardware and software were not ready for consumer adoption at this time and these systems failed to live up to the substantial hype of being a \textit{``revolutionary technology''} which promised to \textit{``transform society''} (figure \ref{rheingold-virtual-reality.jpg}), resulting in the VR bubble bursting.
 
 \begin{figure}[h]
@@ -398,7 +398,7 @@ A further consideration is the discrepancy between the lateral position of the c
 
 %=========================================================================================================
 
-\section{Indoor Positioning Systems}
+\section{Indoor Positioning System}
 
 For outdoor applications GPS represents a suitable solution for the vast majority of position tracking requirements. Global coverage and the ability to scale accuracy as required, from many metres with a basic GPS receiver such as those integrated into smartphones, to a few metres with SBAS augmentations and further to as little as 10cm with the (costly) deployment of Differential GPS (DGPS) beacons, has led to GPS occupying the role of the `go to' solution where position tracking is required for an outdoor application. For indoor applications however there is no single technology or solution that provides such encompassing suitability as GPS does outdoors and as such a large number of different technologies have been employed to produce IPS, which are summarised in figure \ref{mautz-table.png}.
 
