--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -383,6 +383,8 @@ Although a cross reality system as a whole might be considered a case of mixed r
 
 A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept. For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including physical actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
 
+In relation to the vacancy problem, in scenarios wherein interaction with both real and virtual content is desirable but for which a complete virtual environment is not required, augmented reality circumvents the vacancy problem by virtue of presenting a single mixed reality environment to the user. However for scenarios wherein the use of a complete virtual environment is either beneficial or outright required, the vacancy problem must be mitigated to allow for constructive interaction with these two discrete environments; as is the aim of the cross reality paradigm.
+
 %=========================================================================================================
 
 \subsection{Parallel Reality}
